fixes z-index of login details, adds border to make it a 'block'

--- a/sass/partials/search/_search.scss
+++ b/sass/partials/search/_search.scss
@@ -346,6 +346,7 @@ h2 {
     padding: 7px;
     position: absolute;
     top: 10px;
+    z-index: 5050;
   }
   a:hover + p {
     display: block;
